fixed some alignment with the business row icons

--- a/landing-page/_assets/stylesheets/components/_icons.scss
+++ b/landing-page/_assets/stylesheets/components/_icons.scss
@@ -7,11 +7,8 @@
 }
 
 .content-icon {
-    padding-right: $normal-spacing - 0.5;
-
-    > svg {
-        padding-top: 0.5rem;
-    }
+    padding-right: $normal-spacing;
+    float: left;
 }
 
 .icon-small {
